# esp32c6-crypto

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
