[package]
edition = "2021"
name    = "esp32c6-crypto"
version = "0.1.0"

[[bin]]
name = "esp32c6-crypto"
path = "./src/bin/main.rs"

[dependencies]
esp-backtrace = { version = "0.16.0", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
]}
esp-bootloader-esp-idf = "0.1.0"
esp-hal                = { version = "=1.0.0-beta.1", features = ["esp32c6", "unstable"] }

critical-section = "1.2.0"
esp-alloc        = "0.8.0"
esp-println = { version = "0.14.0",  features = ["esp32c6", "log-04"] }
log = { version = "0.4.27" }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
